[gd_scene load_steps=6 format=3 uid="uid://bicuf53556qyp"]

[ext_resource type="Script" path="res://scripts/control_box.gd" id="1_e232e"]
[ext_resource type="Texture2D" uid="uid://iss1eip4yp1u" path="res://sprites/up_arrow.png" id="2_oyc06"]
[ext_resource type="FontFile" uid="uid://d1i0jxno7snjn" path="res://yu-gi-oh-font/yu-gi-oh-matrix-bold.ttf" id="2_xdv7i"]
[ext_resource type="Texture2D" uid="uid://dtl03cv7sn7h1" path="res://sprites/down_arrow.png" id="3_jjgpw"]

[sub_resource type="LabelSettings" id="LabelSettings_dwd0e"]
font = ExtResource("2_xdv7i")
font_size = 17

[node name="ControlBox" type="Node2D"]
script = ExtResource("1_e232e")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_right = 169.0
offset_bottom = 580.0
color = Color(0.195431, 0.243539, 0.370421, 1)

[node name="increse_hand_size" type="Button" parent="."]
offset_left = 83.0
offset_top = 60.0
offset_right = 103.0
offset_bottom = 75.0
scale = Vector2(0.06, 0.06)
focus_mode = 0
icon = ExtResource("2_oyc06")
flat = true

[node name="decrese_hand_size" type="Button" parent="."]
offset_left = 83.0
offset_top = 78.0
offset_right = 103.0
offset_bottom = 92.0
scale = Vector2(0.06, 0.06)
focus_mode = 0
icon = ExtResource("3_jjgpw")
flat = true

[node name="hand_size_marker_label" type="Label" parent="."]
offset_left = 10.0
offset_top = 29.0
offset_right = 96.0
offset_bottom = 52.0
text = "Hand size: "
label_settings = SubResource("LabelSettings_dwd0e")

[node name="number_of_hands_marker_label" type="Label" parent="."]
offset_left = 10.0
offset_top = 104.0
offset_right = 168.0
offset_bottom = 131.0
text = "Number of games:"
label_settings = SubResource("LabelSettings_dwd0e")

[node name="calculate_button" type="Button" parent="."]
offset_left = 10.0
offset_top = 214.0
offset_right = 159.0
offset_bottom = 274.0
text = "Calcualte"

[node name="good_hands_marker_label" type="Label" parent="."]
offset_left = 37.0
offset_top = 296.0
offset_right = 138.0
offset_bottom = 319.0
text = "Good hands:"
label_settings = SubResource("LabelSettings_dwd0e")

[node name="good_hands_label" type="Label" parent="."]
offset_left = 37.0
offset_top = 325.0
offset_right = 132.0
offset_bottom = 348.0
text = "0"
label_settings = SubResource("LabelSettings_dwd0e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="bad_hands_marker_label" type="Label" parent="."]
offset_left = 40.0
offset_top = 364.0
offset_right = 138.0
offset_bottom = 387.0
text = "Bad hands:"
label_settings = SubResource("LabelSettings_dwd0e")

[node name="bad_hands_label" type="Label" parent="."]
offset_left = 37.0
offset_top = 394.0
offset_right = 136.0
offset_bottom = 417.0
text = "0"
label_settings = SubResource("LabelSettings_dwd0e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="hand_size_textbox" type="LineEdit" parent="."]
offset_left = 10.0
offset_top = 59.0
offset_right = 77.0625
offset_bottom = 94.0
text = "6"

[node name="number_of_hands_textbox" type="LineEdit" parent="."]
offset_left = 10.0
offset_top = 134.0
offset_right = 159.0
offset_bottom = 169.0
text = "10000"

[node name="percentage_label" type="Label" parent="."]
offset_left = 80.0
offset_top = 502.0
offset_right = 120.0
offset_bottom = 540.0
text = "0%"
label_settings = SubResource("LabelSettings_dwd0e")

[node name="Label" type="Label" parent="."]
offset_left = 41.0
offset_top = 448.0
offset_right = 137.0
offset_bottom = 497.0
text = "Good hands 
percentage:"
label_settings = SubResource("LabelSettings_dwd0e")

[connection signal="mouse_entered" from="increse_hand_size" to="." method="_on_increse_hand_size_mouse_entered"]
[connection signal="mouse_exited" from="increse_hand_size" to="." method="_on_increse_hand_size_mouse_exited"]
[connection signal="pressed" from="increse_hand_size" to="." method="_on_increse_hand_size_pressed"]
[connection signal="mouse_entered" from="decrese_hand_size" to="." method="_on_decrese_hand_size_mouse_entered"]
[connection signal="mouse_exited" from="decrese_hand_size" to="." method="_on_decrese_hand_size_mouse_exited"]
[connection signal="pressed" from="decrese_hand_size" to="." method="_on_decrese_hand_size_pressed"]
[connection signal="pressed" from="calculate_button" to="." method="_on_calculate_button_pressed"]
